--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="content">
       <h1>Play Snake</h1>
-      <canvas id="snake" width="760" height="480"></canvas>
+      <div id="gameContainer"></div>
       <h2>Instructions</h2>
       <script type="text/javascript" src="common.js"></script>
       <script type="text/javascript" src="snake.js"></script>
