--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <title>Snake</title>
     <link type="text/css" rel="stylesheet" href="snake.css" />
+    <meta charset="utf-8">
   </head>
   <body>
+    <div class="content">
     <h1>Play Snake</h1>
     <canvas id="snake" width="760" height="480"></canvas>
     <h2>Instructions</h2>
     <script type="text/javascript" src="snake.js"></script>
+    </div>
   </body>
 </html>
