--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <h1>Play Snake</h1>
       <div id="gameContainer"></div>
       <h2>Instructions</h2>
+      <h2>Credits</h2>
+      <ul>
+        <li>This sick font: Badaboom BB by Blambot</li>
+      </ul>
       <script type="text/javascript" src="common.js"></script>
       <script type="text/javascript" src="snake.js"></script>
     </div>
