--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <h1>Play Snake</h1>
       <div id="gameContainer"></div>
       <h2>Instructions</h2>
+        <p>
+          Red apples are good.
+        </p>
+        <p>
+          Black apples are bad.
+        </p>
       <h2>Credits</h2>
       <ul>
         <li>This sick font: Badaboom BB by Blambot</li>
